Fixed tokenizer rules

--- a/src/tokenizer/charrefs.html
+++ b/src/tokenizer/charrefs.html
@@ -196,6 +196,8 @@
 
 <dt>Anything else
 <dd>
+  <p>Set a U+0026 AMPERSAND character (&amp;) to the
+  <span>temporary buffer</span>.
   <p>Unset the <span>additional allowed character</span>.
   <p>Set the <span>original state</span> to <span>data state</span>.
   <p>Switch to the <span>character reference state</span>.
@@ -211,6 +213,8 @@
 
 <dt>Anything else
 <dd>
+  <p>Set a U+0026 AMPERSAND character (&amp;) to the
+  <span>temporary buffer</span>.
   <p>Unset the <span>additional allowed character</span>.
   <p>Set the <span>original state</span> to <span>RCDATA state</span>.
   <p>Switch to the <span>character reference state</span>.
@@ -226,7 +230,8 @@
 
 <dt>Anything else
 <dd>
-  <!--<p>Set the <span>original state</span> to <span>RCDATA state</span>.-->
+  <p>Set a U+0026 AMPERSAND character (&amp;) to the
+  <span>temporary buffer</span>.
   <p>Switch to the <span>character reference state</span>.
   <p>Reconsume the <span>current input character</span>.
 
