--- a/src/tokenizer/charrefs.html
+++ b/src/tokenizer/charrefs.html
@@ -86,7 +86,7 @@
 <dd>
   <p>Append the <span>current input character</span> to
   the <span>temporary buffer</span>.
-  <p>Switch to the <span>character reference hexadecimal character reference state</span>.
+  <p>Switch to the <span>character reference hexadecimal number state</span>.
 
 <dt>Anything else
 <dd>
