--- a/src/tokenizer/charrefs.html
+++ b/src/tokenizer/charrefs.html
@@ -110,7 +110,7 @@
 
 <dt>U+003B SEMICOLON (;)
 <dd>
-  <p><span>Process the temporary buffer as a decimal reference</span>.
+  <p><span>Process the temporary buffer as a hexadecimal reference</span>.
   <p><span>Flush the temporary buffer</span>.
   <p>Switch back to the <span>original state</span>.
 
