--- a/src/tokenizer/xml-only.html
+++ b/src/tokenizer/xml-only.html
@@ -1,9 +1,11 @@
 <!DOCTYPE html>
 <title>XML tokenizer</title>
 
+<!-- Not in XML5 -->
 <p>A <span>DOCTYPE token</span> has a <i>has internal subset</i> flag,
 which is initially unset.
 
+<!-- Not in XML5 -->
 <p>An <span>XML parser</span> has a <i>DOCTYPE mode</i>, whose initial
 value is <i>N/A</i>.  Its value can be one of <i>N/A</i>
 or <i>internal subset</i>.
