XML internal subset states

--- a/src/tokenizer/xml-delta.html
+++ b/src/tokenizer/xml-delta.html
@@ -14,33 +14,8 @@
 
 </dl>
 
-<h1><span>After DOCTYPE system identifier state</span></h1>
-
-<dl class=switch>
-
-<dt>U+005B LEFT SQUARE BRACKET ([)
-<dd>
-  <p>Switch to the <span>DOCTYPE internal subset state</span>.
-  <p>Set the <i>has internal subset</i> flag of the current token.
-  <p>Set the <i>DOCTYPE mode</i> of the parser to <i>internal subset</i>.
-  <p>Emit the current <!--DOCTYPE -->token.
-
-</dl>
-
-<h1><span>Bogus DOCTYPE state</span></h1>
-
-<dl class=switch>
-
-<dt>U+005B ([)
-<dd>
-  <p>Switch to the <span>DOCTYPE internal subset state</span>.
-  <p>Set the <i>has internal subset</i> flag of the current token.
-  <p>Set the <i>DOCTYPE mode</i> of the parser to <i>internal subset</i>.
-  <p>Emit the current <!--DOCTYPE -->token.
-
-</dl>
-
 <h1><span>After DOCTYPE name state</span></h1>
+<!-- DOCTYPE root name after state in XML5 with different definitions -->
 
 <dl class=switch>
 
@@ -69,5 +44,125 @@
   <p>Otherwise, this is a <span>parse error</span>. Set the DOCTYPE token's
   <i>force-quirks</i> flag to <i>on</i>. Switch to the <span>bogus
   DOCTYPE state</span>.
+
+</dl>
+
+<h1><span>After DOCTYPE public identifier state</span></h1>
+<!-- Not in XML5 -->
+
+<dl class=switch>
+
+<dt>U+003E GREATER-THAN SIGN (>)
+<dd>
+  <p><span>Parse error</span>.
+  <p>Switch to the <span>data state</span>.
+  <p>Emit the current token.
+
+<dt>U+005B LEFT SQUARE BRACKET ([)
+<dd>
+  <p>Switch to the <span>DOCTYPE internal subset state</span>.
+  <p>Set the <i>has internal subset</i> flag of the current token.
+  <p>Set the <i>DOCTYPE mode</i> of the parser to <i>internal subset</i>.
+  <p>Emit the current token.
+
+</dl>
+
+<h1><span>Between DOCTYPE public and system identifiers state</span></h1>
+<!-- Not in XML5 -->
+
+<dl class=switch>
+
+<dt>U+003E GREATER-THAN SIGN (>)
+<dd>
+  <p><span>Parse error</span>.
+  <p>Switch to the <span>data state</span>.
+  <p>Emit the current token.
+
+<dt>U+005B LEFT SQUARE BRACKET ([)
+<dd>
+  <p>Switch to the <span>DOCTYPE internal subset state</span>.
+  <p>Set the <i>has internal subset</i> flag of the current token.
+  <p>Set the <i>DOCTYPE mode</i> of the parser to <i>internal subset</i>.
+  <p>Emit the current token.
+
+</dl>
+
+<h1><span>After DOCTYPE system keyword state</span></h1>
+<!-- Not in XML5 -->
+
+<dl class=switch>
+
+<dt>U+005B LEFT SQUARE BRACKET ([)
+<dd>
+  <p>Switch to the <span>DOCTYPE internal subset state</span>.
+  <p>Set the <i>has internal subset</i> flag of the current token.
+  <p>Set the <i>DOCTYPE mode</i> of the parser to <i>internal subset</i>.
+  <p>Emit the current token.
+
+</dl>
+
+<h1><span>Before DOCTYPE system identifier state</span></h1>
+<!-- Not in XML5 -->
+
+<dl class=switch>
+
+<dt>U+005B LEFT SQUARE BRACKET ([)
+<dd>
+  <p>Switch to the <span>DOCTYPE internal subset state</span>.
+  <p>Set the <i>has internal subset</i> flag of the current token.
+  <p>Set the <i>DOCTYPE mode</i> of the parser to <i>internal subset</i>.
+  <p>Emit the current token.
+
+</dl>
+
+<h1><span>DOCTYPE system identifier (double-quoted) state</span></h1>
+<!-- DOCTYPE identifier double quoted state in XML5 -->
+
+<dl class=switch>
+
+<dt>U+003E GREATER-THAN SIGN (>)
+<dd>
+  <p>Append the <span>current input character</span> to the current
+  token's <i>system identifier</i>.
+
+</dl>
+
+<h1><span>DOCTYPE system identifier (single-quoted) state</span></h1>
+<!-- DOCTYPE identifier single quoted state in XML5 -->
+
+<dl class=switch>
+
+<dt>U+003E GREATER-THAN SIGN (>)
+<dd>
+  <p>Append the <span>current input character</span> to the current
+  token's <i>system identifier</i>.
+
+</dl>
+
+<h1><span>After DOCTYPE system identifier state</span></h1>
+<!-- Not in XML5 -->
+
+<dl class=switch>
+
+<dt>U+005B LEFT SQUARE BRACKET ([)
+<dd>
+  <p>Switch to the <span>DOCTYPE internal subset state</span>.
+  <p>Set the <i>has internal subset</i> flag of the current token.
+  <p>Set the <i>DOCTYPE mode</i> of the parser to <i>internal subset</i>.
+  <p>Emit the current token.
+
+</dl>
+
+<h1><span>Bogus DOCTYPE state</span></h1>
+<!-- Not in XML5 -->
+
+<dl class=switch>
+
+<dt>U+005B LEFT SQUARE BRACKET ([)
+<dd>
+  <p>Switch to the <span>DOCTYPE internal subset state</span>.
+  <p>Set the <i>has internal subset</i> flag of the current token.
+  <p>Set the <i>DOCTYPE mode</i> of the parser to <i>internal subset</i>.
+  <p>Emit the current token.
 
 </dl>
