--- a/src/tokenizer/xml-only.html
+++ b/src/tokenizer/xml-only.html
@@ -6,9 +6,20 @@
 which is initially unset.
 
 <!-- Not in XML5 -->
+<p>A <span>DOCTYPE token</span> has an <i>internal subset tainted</i>
+flag, which is initially unset.
+
+<!-- Not in XML5 -->
 <p>An <span>XML parser</span> has a <i>DOCTYPE mode</i>, whose initial
 value is <i>N/A</i>.  Its value can be one of <i>N/A</i>
 or <i>internal subset</i>.
+
+<p>There are following additional token types<!-- not in XML5 -->:
+<dfn>processing instruction token</dfn>, and <dfn>end-of-DOCTYPE
+token</dfn>.
+
+<p>A <span>processing instruction token</span> has <i>target</i>
+and <i>data</i>.
 
 <h1><dfn>PI state</dfn></h1>
 <!-- pi state in XML5 -->
@@ -187,6 +198,179 @@ or <i>internal subset</i>.
   <p>Reconsume the <span>current input character</span>.
 
 </dl>
+
+<h1><dfn>DOCTYPE internal subset state</dfn></h1>
+
+<p>Consume the <span>next input character</span>:
+
+<dl class=switch>
+
+<dt>U+003C LESS-THAN SIGN (&lt;)
+<dd>
+  <p>Switch to the <span>DOCTYPE tag state</span>.
+
+<!-- Not defined in XML5 -->
+<dt>U+0025 PERCENT SIGN (%)
+<dd>
+  <p>Switch to the <span>parameter entity name state - DOCTYPE
+  internal subset state</span>.
+
+<dt>U+005D RIGHT SQUARE BRACKET (])
+<dd>
+  <p>Switch to the <span>after DOCTYPE internal subset state</span>.
+
+<dt>U+0009 CHARACTER TABULATION (tab)
+<dt>U+000A LINE FEED (LF)
+<dt>U+000C FORM FEED (FF)<!-- Not in XML5 -->
+<dt>U+0020 SPACE
+<dd>
+  <p>Ignore the character.
+
+<dt>EOF
+<dd>
+  <p><span>Parse error</span>.
+  <p>Switch to the <span>data state</span>.
+  <p>Emit an <span>end-of-DOCTYPE token</span>.
+  <p>Reconsume the <span>current input character</span>.
+
+<dt>Anything else
+<dd>
+  <p>If the <i>internal subset tainted</i> flag of the current token
+  is set, <span>parse error</span>.<!-- Not in XML5 -->
+  <p>Set the <i>internal subset tainted</i> flag of the current token.
+
+</dl>
+
+<h1><dfn>After DOCTYPE internal subset state</dfn></h1>
+<!-- DOCTYPE internal subset after state in XML5 -->
+
+<p>Consume the <span>next input character</span>:
+
+<dl class=switch>
+
+<dt>U+003E GREATER-THAN SIGN (>)
+<dd>
+  <p>Switch to the <span>data state</span>.
+  <p>Emit an <span>end-of-DOCTYPE token</span>.
+
+<dt>EOF
+<dd>
+  <p><span>Parse error</span>.
+  <p>Switch to the <span>data state</span>.
+  <p>Emit an <span>end-of-DOCTYPE token</span>.
+  <p>Reconsume the <span>current input character</span>.
+
+<dt>Anything else
+<dd>
+  <p><span>Parse error</span>.<!-- Not in XML5 -->
+  <p>Switch to the <span>bogus after DOCTYPE internal subset
+  state</span>.<!-- Not in XML5 -->
+
+</dl>
+
+<h1><dfn>Bogus after DOCTYPE internal subset state</dfn></h1>
+<!-- Not in XML5 -->
+
+<p>Consume the <span>next input character</span>:
+
+<dl class=switch>
+
+<dt>U+003E GREATER-THAN SIGN (>)
+<dd>
+  <p>Switch to the <span>data state</span>.
+  <p>Emit an <span>end-of-DOCTYPE token</span>.
+
+<dt>EOF
+<dd>
+  <p>Switch to the <span>data state</span>.
+  <p>Emit an <span>end-of-DOCTYPE token</span>.
+  <p>Reconsume the <span>current input character</span>.
+
+<dt>Anything else
+<dd>
+  <p>Ignore the character.
+
+</dl>
+
+<h1><dfn>DOCTYPE tag state</dfn></h1>
+
+<p>Consume the <span>next input character</span>:
+
+<dl class=switch>
+
+<dt>U+0021 EXCLAMATION MARK (!)
+<dd>
+  <p>Switch to the <span>DOCTYPE markup declaration open state</span>.
+
+<dt>U+003F QUESTION MARK (?)
+<dd>
+  <p>Switch to the <span>PI state<!-- DOCTYPE pi state in XML5
+  --></span>.
+
+<dt>EOF
+<dd>
+  <p><span>Parse error</span>.
+  <p>Switch to the <span>DOCTYPE internal subset state<!-- data state
+  in XML5 --></span>.
+  <p>Reconsume the <span>current input character</span>.
+
+<dt>Anything else
+<dd>
+  <p><span>Parse error</span>.
+  <p>Switch to the <span>bogus comment state<!-- DOCTYPE bogus comment
+  state in XML5 --></span>.
+
+</dl>
+
+<h1><dfn>DOCTYPE markup declaration open state</dfn></h1>
+<!-- DOCTYPE markup declaration state in XML5 -->
+
+<p>If the next two characters are both U+002D HYPHEN-MINUS characters
+(-), consume those two characters, create a <span>comment token</span>
+whose <i>data</i> is the empty string, and switch to the <span>comment
+start state<!-- DOCTYPE comment state in XML5 --></span>.
+
+<p>Otherwise, if the next six characters are
+a <span>case-sensitive</span> match for the string "ENTITY", then
+consume those characters and switch to the <span>ENTITY state</span>.
+<p>Otherwise, if the next six characters are an <span>ASCII
+case-insensitive</span> match for the word "ENTITY", then this is a
+parse error; consume those characters and switch to the <span>ENTITY
+state</span>.
+
+<p>Otherwise, if the next seven characters are
+a <span>case-sensitive</span> match for the string "ATTLIST", then
+consume those characters and switch to the <span>ATTLIST state</span>.
+<p>Otherwise, if the next seven characters are an <span>ASCII
+case-insensitive</span> match for the word "ATTLIST", then this is a
+parse error; consume those characters and switch to the <span>ATTLIST
+state</span>.
+
+<p>Otherwise, if the next eight characters are
+a <span>case-sensitive</span> match for the string "NOTATION", then
+consume those characters and switch to the <span>NOTATION
+state</span>.
+<p>Otherwise, if the next eight characters are an <span>ASCII
+case-insensitive</span> match for the word "NOTATION", then this is a
+parse error; consume those characters and switch to the <span>NOTATION
+state</span>.
+
+<p>Otherwise, if the next seven characters are
+a <span>case-sensitive</span> match for the string "ELEMENT", then
+consume those characters and switch to the <span>ELEMENT state</span>.
+<p>Otherwise, if the next seven characters are an <span>ASCII
+case-insensitive</span> match for the word "ELEMENT", then this is a
+parse error; consume those characters and switch to the <span>ELEMENT
+state</span>.
+
+<!-- Not in XML5 -->
+<!-- XXX If "[", ... -->
+
+<p>Otherwise, this is a <span>parse error</span>. Switch to
+the <span>bogus comment state<!-- DOCTYPE bogus comment state in XML5
+--></span>. The next character that is consumed, if any, is the first
+character that will be in the comment.
+
 
 
 XXX
