XML tokenization rules for ELEMENT and marked sections

--- a/src/tokenizer/xml-delta.html
+++ b/src/tokenizer/xml-delta.html
@@ -60,7 +60,7 @@
 
 <dt>U+005B LEFT SQUARE BRACKET ([)
 <dd>
-  <p>Switch to the <span>DOCTYPE internal subset state</span>.
+  <p>Switch to the <span>DTD state</span>.
   <p>Set the <i>has internal subset</i> flag of the current token.
   <p>Set the <i>DOCTYPE mode</i> of the parser to <i>internal subset</i>.
   <p>Emit the current token.
@@ -80,7 +80,7 @@
 
 <dt>U+005B LEFT SQUARE BRACKET ([)
 <dd>
-  <p>Switch to the <span>DOCTYPE internal subset state</span>.
+  <p>Switch to the <span>DTD state</span>.
   <p>Set the <i>has internal subset</i> flag of the current token.
   <p>Set the <i>DOCTYPE mode</i> of the parser to <i>internal subset</i>.
   <p>Emit the current token.
@@ -94,7 +94,7 @@
 
 <dt>U+005B LEFT SQUARE BRACKET ([)
 <dd>
-  <p>Switch to the <span>DOCTYPE internal subset state</span>.
+  <p>Switch to the <span>DTD state</span>.
   <p>Set the <i>has internal subset</i> flag of the current token.
   <p>Set the <i>DOCTYPE mode</i> of the parser to <i>internal subset</i>.
   <p>Emit the current token.
@@ -108,7 +108,7 @@
 
 <dt>U+005B LEFT SQUARE BRACKET ([)
 <dd>
-  <p>Switch to the <span>DOCTYPE internal subset state</span>.
+  <p>Switch to the <span>DTD state</span>.
   <p>Set the <i>has internal subset</i> flag of the current token.
   <p>Set the <i>DOCTYPE mode</i> of the parser to <i>internal subset</i>.
   <p>Emit the current token.
@@ -146,7 +146,7 @@
 
 <dt>U+005B LEFT SQUARE BRACKET ([)
 <dd>
-  <p>Switch to the <span>DOCTYPE internal subset state</span>.
+  <p>Switch to the <span>DTD state</span>.
   <p>Set the <i>has internal subset</i> flag of the current token.
   <p>Set the <i>DOCTYPE mode</i> of the parser to <i>internal subset</i>.
   <p>Emit the current token.
@@ -160,7 +160,7 @@
 
 <dt>U+005B LEFT SQUARE BRACKET ([)
 <dd>
-  <p>Switch to the <span>DOCTYPE internal subset state</span>.
+  <p>Switch to the <span>DTD state</span>.
   <p>Set the <i>has internal subset</i> flag of the current token.
   <p>Set the <i>DOCTYPE mode</i> of the parser to <i>internal subset</i>.
   <p>Emit the current token.
