--- a/src/tokenizer/xml-only.html
+++ b/src/tokenizer/xml-only.html
@@ -4,9 +4,12 @@
 <p>A <span>DOCTYPE token</span> has a <i>has internal subset</i> flag
 and an <i>internal subset tainted</i> flag.  They are initially unset.
 
-<p>An <span>XML parser</span> has a <i>DOCTYPE mode</i>, whose initial
+<p>An <span>XML parser</span> has a <dfn>DTD mode</dfn>, whose initial
 value is <i>N/A</i>.  Its value can be one of <i>N/A</i>
 or <i>internal subset</i>.
+
+<p>An <span>XML parser</span> has a <dfn>marked section nesting
+level</dfn>, which is initially set to zero (0).
 
 <p>There are following additional token types:
 <dfn>processing instruction token</dfn>, <dfn>ENTITY
@@ -203,7 +206,7 @@ initially <i>null</i>.
 
 </dl>
 
-<h1><dfn>DOCTYPE internal subset state</dfn></h1>
+<h1><dfn>DTD state</dfn></h1>
 
 <p>Consume the <span>next input character</span>:
 
@@ -221,7 +224,10 @@ initially <i>null</i>.
 
 <dt>U+005D RIGHT SQUARE BRACKET (])
 <dd>
-  <p>Switch to the <span>after DOCTYPE internal subset state</span>.
+  <p>If the <span>DTD mode</span> of the parser is <i>internal
+  subset</i>, switch to the <span>after DOCTYPE internal subset
+  state</span>.
+  <p>Otherwise, switch to the <span>in DTD msc state</span>.
 
 <dt>U+0009 CHARACTER TABULATION (tab)
 <dt>U+000A LINE FEED (LF)
@@ -232,10 +238,12 @@ initially <i>null</i>.
 
 <dt>EOF
 <dd>
-  <p><span>Parse error</span>.
-  <p>Switch to the <span>data state</span>.
-  <p>Emit an <span>end-of-DOCTYPE token</span>.
-  <p>Reconsume the <span>current input character</span>.
+  <p>If the <span>marked section nesting level</span> is <em>not</em>
+  zero (0), <span>parse error</span>.
+  <p>If the <span>DTD mode</span> is <i>internal subset</i>, this is
+  a <span>parse error</span> and switch to the <span>data
+  state</span>, emit an <span>end-of-DOCTYPE token</span>, and
+  reconsume the <span>current input character</span>.
 
 <dt>Anything else
 <dd>
@@ -340,7 +348,7 @@ consume those characters and switch to the <span>ENTITY state</span>.
 <p>Otherwise, if the next six characters are an <span>ASCII
 case-insensitive</span> match for the word "ENTITY", then this is a
 parse error; consume those characters and switch to the <span>ENTITY
-state</span>.
+state</span>.<!-- Not in XML5 -->
 
 <p>Otherwise, if the next seven characters are
 a <span>case-sensitive</span> match for the string "ATTLIST", then
@@ -348,7 +356,7 @@ consume those characters and switch to the <span>ATTLIST state</span>.
 <p>Otherwise, if the next seven characters are an <span>ASCII
 case-insensitive</span> match for the word "ATTLIST", then this is a
 parse error; consume those characters and switch to the <span>ATTLIST
-state</span>.
+state</span>.<!-- Not in XML5 -->
 
 <p>Otherwise, if the next eight characters are
 a <span>case-sensitive</span> match for the string "NOTATION", then
@@ -357,8 +365,9 @@ state</span>.
 <p>Otherwise, if the next eight characters are an <span>ASCII
 case-insensitive</span> match for the word "NOTATION", then this is a
 parse error; consume those characters and switch to the <span>NOTATION
-state</span>.
+state</span>.<!-- Not in XML5 -->
 
+<!-- Not in XML5 -->
 <p>Otherwise, if the next seven characters are
 a <span>case-sensitive</span> match for the string "ELEMENT", then
 consume those characters and switch to the <span>ELEMENT state</span>.
@@ -368,7 +377,10 @@ parse error; consume those characters and switch to the <span>ELEMENT
 state</span>.
 
 <!-- Not in XML5 -->
-<!-- XXX If "[", ... -->
+<p>Otherwise, if the <i>DTD mode</i> of the parser
+is <em>not</em> <i>internal subset</i> and the next character is a
+U+005B LEFT SQUARE BRACKET character ([), switch to the <span>after
+mss state</span>.
 
 <p>Otherwise, this is a <span>parse error</span>. Switch to
 the <span>bogus comment state<!-- DOCTYPE bogus comment state in XML5
@@ -416,5 +428,276 @@ character that will be in the comment.
 <dd>
   <p>Switch to the <span>data state</span>.
   <p>Reconsume the <span>current input character</span>.
+
+</dl>
+
+<h1><dfn>after mss state</dfn></h1>
+<!-- Not in XML5 -->
+
+<p>Consume the <span>next input character</span>:
+
+<dl class=switch>
+
+<dt>U+0009 CHARACTER TABULATION (tab)
+<dt>U+000A LINE FEED (LF)
+<dt>U+000C FORM FEED (FF)<!-- Not in XML5 -->
+<dt>U+0020 SPACE
+<dd>
+  <p>Switch to the <span>before status keyword state</span>.
+
+<dt>U+0025 PERCENT SIGN (%)
+<dd>
+  <p>Set the <span>original state</span> to the <span>before status
+  keyword state</span>.
+  <p>Switch to the <span>parameter entity name in DTD state</span>.
+
+<dt>Anything else
+<dd>
+  <p>Switch to the <span>before status keyword state</span>.
+  <p>Reconsume the <span>current input character</span>.
+
+</dl>
+
+<h1><dfn>before status keyword state</dfn></h1>
+<!-- Not in XML5 -->
+
+<p>Consume the <span>next input character</span>:
+
+<dl class=switch>
+
+<dt>U+0009 CHARACTER TABULATION (tab)
+<dt>U+000A LINE FEED (LF)
+<dt>U+000C FORM FEED (FF)<!-- Not in XML5 -->
+<dt>U+0020 SPACE
+<dd>
+  <p>Ignore the character.
+
+<dt>U+0025 PERCENT SIGN (%)
+<dd>
+  <p>Set the <span>original state</span> to the <span>before status
+  keyword state</span>.
+  <p>Switch to the <span>parameter entity name in DTD state</span>.
+
+<dt>U+005B LEFT SQUARE BRACKET ([)
+<dd>
+  <p><span>Parse error</span>.
+  <p>Increment the <i>marked section nesting level</i> of the parser
+  by one (1).
+  <p>Switch to the <span>ignored section state</span>.
+
+<dt>EOF
+<dd>
+  <p><span>Parse error</span>.
+  <!--<p>Increment the <i>marked section nesting level</i> of the parser
+  by one (1).-->
+  <p>Switch to the <span>ignored section state</span>.
+  <p>Reconsume the <span>current input character</span>.
+
+<dt>Anything else
+<dd>
+  <p>Set the <span>temporary buffer</span> to the <span>current input
+  character</span>.
+  <p>Switch to the <span>status keyword state</span>.
+
+</dl>
+
+<h1><dfn>status keyword state</dfn></h1>
+<!-- Not in XML5 -->
+
+<p>Consume the <span>next input character</span>:
+
+<dl class=switch>
+
+<dt>U+0009 CHARACTER TABULATION (tab)
+<dt>U+000A LINE FEED (LF)
+<dt>U+000C FORM FEED (FF)<!-- Not in XML5 -->
+<dt>U+0020 SPACE
+<dd>
+  <p>Switch to the <span>after status keyword state</span>.
+
+<dt>U+0025 PERCENT SIGN (%)
+<dd>
+  <p>Set the <span>original state</span> to the <span>after status
+  keyword state</span>.
+  <p>Switch to the <span>parameter entity name in DTD state</span>.
+
+<dt>U+005B LEFT SQUARE BRACKET ([)
+<dt>EOF
+<dd>
+  <p>Switch to the <span>after status keyword state</span>.
+  <p>Reconsume the <span>current input character</span>.
+
+<dt>Anything else
+<dd>
+  <p>Append the <span>current input character</span> to
+  the <span>temporary buffer</span>.
+
+</dl>
+
+<h1><dfn>after status keyword state</dfn></h1>
+<!-- Not in XML5 -->
+
+<p>Consume the <span>next input character</span>:
+
+<dl class=switch>
+
+<dt>U+0009 CHARACTER TABULATION (tab)
+<dt>U+000A LINE FEED (LF)
+<dt>U+000C FORM FEED (FF)<!-- Not in XML5 -->
+<dt>U+0020 SPACE
+<dd>
+  <p>Ignore the character.
+
+<dt>U+0025 PERCENT SIGN (%)
+<dd>
+  <p>Set the <span>original state</span> to the <span>after status
+  keyword state</span>.
+  <p>Switch to the <span>parameter entity name in DTD state</span>.
+
+<dt>U+005B LEFT SQUARE BRACKET ([)
+<dd>
+  <p>If the <span>temporary buffer</span> is equal to
+  "<code>INCLUDE</code>", increment the <i>marked section nesting
+  level</i> of the parser by one (1) and switch to the <span>DTD
+  state</span>.
+  <p>Otherwise:
+  <p>If the <span>temporary buffer</span> is <em>not</em> equal to
+  "<code>IGNORE</code>", <span>parse error</span>.
+  <p>Increment the <i>marked section nesting level</i> of the parser
+  by one (1).
+  <p>Switch to the <span>ignored section state</span>.
+
+<dt>EOF
+<dd>
+  <p><span>Parse error</span>.
+  <!--<p>Increment the <i>marked section nesting level</i> of the parser
+  by one (1).-->
+  <p>Switch to the <span>ignored section state</span>.
+  <p>Reconsume the <span>current input character</span>.
+
+<dt>Anything else
+<dd>
+  <p><span>Parse error</span>.
+  <p>Increment the <i>marked section nesting level</i> of the parser
+  by one (1).
+  <p>Switch to the <span>ignored section state</span>.
+
+</dl>
+
+<h1><dfn>in DTD msc state</dfn></h1>
+<!-- Not in XML5 -->
+
+<p>Consume the <span>next input character</span>:
+
+<dl class=switch>
+
+<dt>U+005D LEFT SQUARE BRACKET (])
+<dd>
+  <p>Switch to the <span>after DTD msc state</span>.
+
+<dt>Anything else
+<dd>
+  <p><span>Parse error</span> <ins>(offset=1)</ins>.
+  <p>Switch to the <span>DTD state</span>.
+  <p>Reconsume the <span>current input character</span>.
+
+</dl>
+
+<h1><dfn>after DTD msc state</dfn></h1>
+<!-- Not in XML5 -->
+
+<p>Consume the <span>next input character</span>:
+
+<dl class=switch>
+
+<dt>U+003E GREATER-THAN SIGN (>)
+<dd>
+  <p>If the <span>marked section nesting level</span> is
+  zero, <span>parse error</span> <ins>(offset=2)</ins>.
+  <p>Otherwise, decrement <span>marked section nesting level</span> by
+  one (1).
+  <p>Switch to the <span>DTD state</span>.
+
+<dt>U+005D LEFT SQUARE BRACKET (])
+<dd>
+  <p><span>Parse error</span> <ins>(offset=1)</ins>.
+
+<dt>Anything else
+<dd>
+  <p><span>Parse error</span> <ins>(offset=2)</ins>.
+  <p>Switch to the <span>DTD state</span>.
+  <p>Reconsume the <span>current input character</span>.
+
+</dl>
+
+<h1><dfn>ignored section state</dfn></h1>
+<!-- Not in XML5 -->
+
+<p>Consume the <span>next input character</span>:
+
+<dl class=switch>
+
+<dt>U+003C LESS-THAN SIGN (&lt;)
+<dd>
+  <p>Switch to the <span>ignored section tag state</span>.
+
+<dt>EOF
+<dd>
+  <!--<p><span>Parse error</span>.-->
+  <p>Switch to the <span>DTD state</span>.
+  <p>Reconsume the <span>current input character</span>.
+
+<dt>Anything else
+<dd>
+  <p>Ignore the character.
+
+</dl>
+
+<h1><dfn>ignored section tag state</dfn></h1>
+<!-- Not in XML5 -->
+
+<p>Consume the <span>next input character</span>:
+
+<dl class=switch>
+
+<dt>U+0021 EXCLAMATION MARK (!)
+<dd>
+  <p>Switch to the <span>ignored section marked declaration open
+  state</span>.
+
+<dt>EOF
+<dd>
+  <!--<p><span>Parse error</span>.-->
+  <p>Switch to the <span>DTD state</span>.
+  <p>Reconsume the <span>current input character</span>.
+
+<dt>Anything else
+<dd>
+  <p>Ignore the character.
+
+</dl>
+
+<h1><dfn>ignored section marked declaration open state</dfn></h1>
+<!-- Not in XML5 -->
+
+<p>Consume the <span>next input character</span>:
+
+<dl class=switch>
+
+<dt>U+005B LEFT SQUARE BRACKET ([)
+<dd>
+  <p>Increment the <span>marked section nesting level</span> by one
+  (1).
+  <p>Switch to the <span>ignored section state</span>.
+
+<dt>EOF
+<dd>
+  <!--<p><span>Parse error</span>.-->
+  <p>Switch to the <span>DTD state</span>.
+  <p>Reconsume the <span>current input character</span>.
+
+<dt>Anything else
+<dd>
+  <p>Ignore the character.
 
 </dl>
