--- a/src/tokenizer/xml-replace.html
+++ b/src/tokenizer/xml-replace.html
@@ -152,7 +152,7 @@ consumed, if any, is the first character that will be in the comment.
 
 <dt>U+005B LEFT SQUARE BRACKET ([)
 <dd>
-  <p>Switch to the <span>DOCTYPE internal subset state</span>.
+  <p>Switch to the <span>DTD state</span>.
   <p>Set the <i>has internal subset</i> flag of the current token.
   <p>Set the <i>DOCTYPE mode</i> of the parser to <i>internal subset</i>.
   <p>Emit the current <!--DOCTYPE -->token.<!-- Not in XML5 -->
