--- a/src/tokenizer/xml-only.html
+++ b/src/tokenizer/xml-only.html
@@ -173,8 +173,8 @@ initially <i>null</i>.
 <dt>Anything else
 <dd>
   <p><span>Parse error</span>.
-  <p>Set a U+003F QUESTION MARK (?) character to the current
-  token's <i>data</i>.
+  <p>Set the current token's <i>data</i> to a U+003F QUESTION MARK (?)
+  character.
   <p>Switch to the <span>PI data state</span>.
   <p>Reconsume the <span>current input character</span>.
 
@@ -219,7 +219,8 @@ initially <i>null</i>.
 <!-- Not defined in XML5 -->
 <dt>U+0025 PERCENT SIGN (%)
 <dd>
-  <p>Set the <span>original state</span> to the current state.
+  <p>Set the <span>original state</span> to the <span>DTD
+  state</span>.
   <p>Switch to the <span>parameter entity name in DTD state</span>.
 
 <dt>U+005D RIGHT SQUARE BRACKET (])
@@ -322,8 +323,7 @@ initially <i>null</i>.
 <dt>EOF
 <dd>
   <p><span>Parse error</span>.
-  <p>Switch to the <span>DOCTYPE internal subset state<!-- data state
-  in XML5 --></span>.
+  <p>Switch to the <span>DTD state<!-- data state in XML5 --></span>.
   <p>Reconsume the <span>current input character</span>.
 
 <dt>Anything else
@@ -337,55 +337,70 @@ initially <i>null</i>.
 <h1><dfn>DOCTYPE markup declaration open state</dfn></h1>
 <!-- DOCTYPE markup declaration state in XML5 -->
 
-<p>If the next two characters are both U+002D HYPHEN-MINUS characters
-(-), consume those two characters, create a <span>comment token</span>
-whose <i>data</i> is the empty string, and switch to the <span>comment
-start state<!-- DOCTYPE comment state in XML5 --></span>.
-
-<p>Otherwise, if the next six characters are
-a <span>case-sensitive</span> match for the string "ENTITY", then
-consume those characters and switch to the <span>ENTITY state</span>.
-<p>Otherwise, if the next six characters are an <span>ASCII
-case-insensitive</span> match for the word "ENTITY", then this is a
-parse error; consume those characters and switch to the <span>ENTITY
-state</span>.<!-- Not in XML5 -->
-
-<p>Otherwise, if the next seven characters are
-a <span>case-sensitive</span> match for the string "ATTLIST", then
-consume those characters and switch to the <span>ATTLIST state</span>.
-<p>Otherwise, if the next seven characters are an <span>ASCII
-case-insensitive</span> match for the word "ATTLIST", then this is a
-parse error; consume those characters and switch to the <span>ATTLIST
-state</span>.<!-- Not in XML5 -->
-
-<p>Otherwise, if the next eight characters are
-a <span>case-sensitive</span> match for the string "NOTATION", then
-consume those characters and switch to the <span>NOTATION
-state</span>.
-<p>Otherwise, if the next eight characters are an <span>ASCII
-case-insensitive</span> match for the word "NOTATION", then this is a
-parse error; consume those characters and switch to the <span>NOTATION
-state</span>.<!-- Not in XML5 -->
+<dl class=switch>
 
 <!-- Not in XML5 -->
-<p>Otherwise, if the next seven characters are
-a <span>case-sensitive</span> match for the string "ELEMENT", then
-consume those characters and switch to the <span>ELEMENT state</span>.
-<p>Otherwise, if the next seven characters are an <span>ASCII
-case-insensitive</span> match for the word "ELEMENT", then this is a
-parse error; consume those characters and switch to the <span>ELEMENT
-state</span>.
+<dt>U+005B LEFT SQUARE BRACKET ([)
+<dd>
+  <p>If the <i>DTD mode</i> of the parser is <em>not</em> <i>internal
+  subset</i>, switch to the <span>after mss state</span>.
+  <p>Otherwise, this is a <span>parse error</span>. Switch to
+  the <span>bogus comment state</span>. The next character that is
+  consumed, if any, is the first character that will be in the
+  comment.
 
-<!-- Not in XML5 -->
-<p>Otherwise, if the <i>DTD mode</i> of the parser
-is <em>not</em> <i>internal subset</i> and the next character is a
-U+005B LEFT SQUARE BRACKET character ([), switch to the <span>after
-mss state</span>.
+<dt>Anything else
+<dd>
+  <p>If the next two characters are both U+002D HYPHEN-MINUS
+  characters (-), consume those two characters, create a <span>comment
+  token</span> whose <i>data</i> is the empty string, and switch to
+  the <span>comment start state<!-- DOCTYPE comment state in XML5
+  --></span>.
 
-<p>Otherwise, this is a <span>parse error</span>. Switch to
-the <span>bogus comment state<!-- DOCTYPE bogus comment state in XML5
---></span>. The next character that is consumed, if any, is the first
-character that will be in the comment.
+  <p>Otherwise, if the next six characters are
+  a <span>case-sensitive</span> match for the string "ENTITY", then
+  consume those characters and switch to the <span>ENTITY
+  state</span>.
+
+  <p>Otherwise, if the next six characters are an <span>ASCII
+  case-insensitive</span> match for the word "ENTITY", then this is a
+  parse error; consume those characters and switch to the <span>ENTITY
+  state</span>.<!-- Not in XML5 -->
+
+  <p>Otherwise, if the next seven characters are
+  a <span>case-sensitive</span> match for the string "ATTLIST", then
+  consume those characters and switch to the <span>ATTLIST
+  state</span>.
+  <p>Otherwise, if the next seven characters are an <span>ASCII
+  case-insensitive</span> match for the word "ATTLIST", then this is a
+  parse error; consume those characters and switch to
+  the <span>ATTLIST state</span>.<!-- Not in XML5 -->
+
+  <p>Otherwise, if the next eight characters are
+  a <span>case-sensitive</span> match for the string "NOTATION", then
+  consume those characters and switch to the <span>NOTATION
+  state</span>.
+  <p>Otherwise, if the next eight characters are an <span>ASCII
+  case-insensitive</span> match for the word "NOTATION", then this is
+  a parse error; consume those characters and switch to
+  the <span>NOTATION state</span>.<!-- Not in XML5 -->
+
+  <!-- Not in XML5 -->
+  <p>Otherwise, if the next seven characters are
+  a <span>case-sensitive</span> match for the string "ELEMENT", then
+  consume those characters and switch to the <span>ELEMENT
+  state</span>.
+  <p>Otherwise, if the next seven characters are an <span>ASCII
+  case-insensitive</span> match for the word "ELEMENT", then this is a
+  parse error; consume those characters and switch to
+  the <span>ELEMENT state</span>.
+
+  <p>Otherwise, this is a <span>parse error</span>. Switch to
+  the <span>bogus comment state<!-- DOCTYPE bogus comment state in
+  XML5 --></span>. The next character that is consumed, if any, is the
+  first character that will be in the comment.
+
+</dl>
 
 <h1><dfn>in msc state</dfn></h1>
 
