--- a/src/xml-tree-construction.html
+++ b/src/xml-tree-construction.html
@@ -271,14 +271,15 @@ follows:
 <dt>A processing instruction token whose target is "xml"
 <dd>
   <p><span>Process an XML declaration</span>.
-  <p>Switch the <span>insertion mode</span> to the <span>next
-  insertion mode</span>.
+  <p>Switch the <span>insertion mode</span> to 
+  "<span title='the "before root element" insertion mode'>before root
+  element</span>".
 
 <dt>Anything else
 <dd>
-  <p><span>XML declaration is missing</span>.
-  <p>Switch the <span>insertion mode</span> to the <span>next
-  insertion mode</span>.
+  <p><span>The XML declaration is missing</span>.
+  <p>Switch the <span>insertion mode</span> to "<span title='the
+  "before root element" insertion mode'>before root element</span>".
   <p>Reprocess the token.
 
 </dl>
