--- a/src/tokenizer/xml-delta.html
+++ b/src/tokenizer/xml-delta.html
@@ -62,7 +62,7 @@
 <dd>
   <p>Switch to the <span>DTD state</span>.
   <p>Set the <i>has internal subset</i> flag of the current token.
-  <p>Set the <i>DOCTYPE mode</i> of the parser to <i>internal subset</i>.
+  <p>Set the <span>DTD mode</span> to <i>internal subset</i>.
   <p>Emit the current token.
 
 </dl>
@@ -82,7 +82,7 @@
 <dd>
   <p>Switch to the <span>DTD state</span>.
   <p>Set the <i>has internal subset</i> flag of the current token.
-  <p>Set the <i>DOCTYPE mode</i> of the parser to <i>internal subset</i>.
+  <p>Set the <span>DTD mode</span> to <i>internal subset</i>.
   <p>Emit the current token.
 
 </dl>
@@ -96,7 +96,7 @@
 <dd>
   <p>Switch to the <span>DTD state</span>.
   <p>Set the <i>has internal subset</i> flag of the current token.
-  <p>Set the <i>DOCTYPE mode</i> of the parser to <i>internal subset</i>.
+  <p>Set the <span>DTD mode</span> to <i>internal subset</i>.
   <p>Emit the current token.
 
 </dl>
@@ -110,7 +110,7 @@
 <dd>
   <p>Switch to the <span>DTD state</span>.
   <p>Set the <i>has internal subset</i> flag of the current token.
-  <p>Set the <i>DOCTYPE mode</i> of the parser to <i>internal subset</i>.
+  <p>Set the <span>DTD mode</span> to <i>internal subset</i>.
   <p>Emit the current token.
 
 </dl>
@@ -148,7 +148,7 @@
 <dd>
   <p>Switch to the <span>DTD state</span>.
   <p>Set the <i>has internal subset</i> flag of the current token.
-  <p>Set the <i>DOCTYPE mode</i> of the parser to <i>internal subset</i>.
+  <p>Set the <span>DTD mode</span> to <i>internal subset</i>.
   <p>Emit the current token.
 
 </dl>
@@ -162,7 +162,7 @@
 <dd>
   <p>Switch to the <span>DTD state</span>.
   <p>Set the <i>has internal subset</i> flag of the current token.
-  <p>Set the <i>DOCTYPE mode</i> of the parser to <i>internal subset</i>.
+  <p>Set the <span>DTD mode</span> to <i>internal subset</i>.
   <p>Emit the current token.
 
 </dl>
