--- a/src/tokenizer/xml-replace.html
+++ b/src/tokenizer/xml-replace.html
@@ -154,7 +154,7 @@ consumed, if any, is the first character that will be in the comment.
 <dd>
   <p>Switch to the <span>DTD state</span>.
   <p>Set the <i>has internal subset</i> flag of the current token.
-  <p>Set the <i>DOCTYPE mode</i> of the parser to <i>internal subset</i>.
+  <p>Set the <span>DTD mode</span> to <i>internal subset</i>.
   <p>Emit the current <!--DOCTYPE -->token.<!-- Not in XML5 -->
 
 <dt>EOF
