XML tree construction

--- a/src/tokenizer/xml-only.html
+++ b/src/tokenizer/xml-only.html
@@ -1,9 +1,6 @@
 <!DOCTYPE html>
 <title>XML tokenizer</title>
 
-<p>A <span>DOCTYPE token</span> has a <i>has internal subset</i> flag
-and an <i>internal subset tainted</i> flag.  They are initially unset.
-
 <p>An <span>XML parser</span> has a <dfn>DTD mode</dfn>, whose initial
 value is <i>N/A</i>.  Its value can be one of <i>N/A</i>
 or <i>internal subset</i>.
@@ -251,9 +248,7 @@ initially <i>null</i>.
 
 <dt>Anything else
 <dd>
-  <p>If the <i>internal subset tainted</i> flag of the current token
-  is set, <span>parse error</span>.<!-- Not in XML5 -->
-  <p>Set the <i>internal subset tainted</i> flag of the current token.
+  <p><span>Parse error</span>.<!-- Not in XML5 -->
 
 </dl>
 
