--- a/src/xml-tree-construction.html
+++ b/src/xml-tree-construction.html
@@ -17,38 +17,46 @@ agent <em class=rfc2119>MUST</em> handle the token as follows:
 
 <dt>A start tag
 <dd>
-  <p><span>Insert an XML element</span> for the token.
-  <p>If the token has its <i>self-closing flag</i> set, then pop the
-  <span>current node</span> off the <span>stack of open
-  elements</span>, and <span>acknowledge the token's <i>self-closing
-  flag</i></span>.
-
-<dt>An end tag whose tag name is ""
-<dd>
-  <p>If the parser was originally created as part of the <span>HTML
-  fragment parsing algorithm</span> and the <span>stack of the open
-  elements</span> has only one node on it, <span>parse error</span>.
-  <p>Otherwise, pop the <span>current node</span> off the <span>stack
+  <p><span>Create an XML element</span> for the token.  Insert the
+  newly created element at the end of the children of
+  the <span>current node</span>.  Put this element in the <span>stack
   of open elements</span>.
+  <p>If the token has its <i>self-closing flag</i> set, pop the
+  <span>current node</span> off the <span>stack of open
+  elements</span>, and then <span>acknowledge the
+  token's <i>self-closing flag</i></span>.
 
 <dt>Any other end tag
 <dd>
-  <p>If the <span>stack of open elements</span> does not <span>have an
-  element in scope</span><!-- XXX = ignore fragment parsing's open
-  elements[0] --> that is an element with the same tag name as that of
-  the token, then this is a <span>parse error</span>; ignore the
-  token.
-  <p>Otherwise, run these steps:
+  <p>Run these steps:
     <ol>
-    <li>If the <span>current node</span> is not an element with the
-    same tag name as that of the token, then this is a <span>parse
-    error</span>.
-    <li>Pop elements from the <span>stack of open elements</span>
-    until an element with the same tag name as the token has been
-    popped from the stack.
-    <li>If the <span>stack of open elements</span> is empty, switch
-    the <span>insertion mode</span> to "<span title='the "after root
-    element" insertion mode'>after root element</span>".
+    <li><p>Let <var>tag name</var> be the <span>tag name</span> of the
+    token.
+    <li><p>If <var>tag name</var> is the empty string, let <var>tag
+    name</var> be the <span>tag name</span> of the <span>current
+    node</span>.
+    <li><p>Initialise <i>node</i> to be the <span>current node</span>
+    (the bottommost node of the stack).
+    <li><p><i>Loop</i>: If the parser was originally created as part
+    of the <span>XML fragment parsing algorithm</span>
+    and <var>node</var> is the topmost node of the <span>stack of open
+    elements</span>, this is a <span>parse error</span>; Ignore the
+    token, and abort these steps.
+    <li><p>If <var>node</var> is an element whose <span>tag name</span>
+    is <var>tag name</var>, then:
+      <ol>
+      <li>If <var>node</var> is not the <span>current node</span>,
+      then this is a <span>parse error</span>.
+      <li>If <var>node</var> is the topmost node of the <span>stack of
+      open elements</span>, switch the <span>insertion mode</span> to
+      "<span title='the "after root element" insertion mode'>after
+      root element</span>".
+      <li>Pop all the nodes from the <span>current node</span> up to
+      <var>node</var>, including <var>node</var>, then stop these steps.
+      </ol>
+    <li><p>Set <var>node</var> to the previous entry in
+    the <span>stack of open elements</span>.
+    <li><p>Return to the step labeled <i>loop</i>.
     </ol>
 
 <dt>A comment token
@@ -59,20 +67,22 @@ agent <em class=rfc2119>MUST</em> handle the token as follows:
 
 <dt>An end-of-file token
 <dd>
-  <p>If the parser was not originally created as part of
-  the <span>HTML fragment parsing algorithm</span>, or if
-  the <span>stack of the open elements</span> has more than one node
-  on it, <span>parse error</span>.
-  <p>Switch the <span>insertion mode</span> to "<span title='the
-  "after root element" insertion mode'>after root element</span>".
+  <p>If the parser was originally created as part of the <span>XML
+  fragment parsing algorithm</span>, then:
+    <ol>
+    <li>If the <span>stack of open elements</span> contains more than
+    one element, <span>parse error</span>.
+    <li><span>stop parsing</span>.
+    </ol>
+  <p>Otherwise, <span>parse error</span>.  <span>Stop parsing</span>.
 
 <dt>A DOCTYPE token
 <dd>
   <p><span>Parse error</span>.
-  <p>If the token's <i>has internal subset</i> flag is set, set
-  the <span>stop processing</span> flag of the parser and switch
-  the <span>insertion mode</span> to "<span title='the "in subset"
-  insertion mode'>in subset</span>".
+  <p>If the token has its <i>has internal subset</i> flag set, set
+  the <span>stop processing</span> flag and switch the <span>insertion
+  mode</span> to "<span title='the "in subset in element" insertion
+  mode'>in subset in element</span>".
 
 </dl>
 
@@ -102,15 +112,6 @@ token as follows:
 
 <dt>An end-of-DOCTYPE token
 <dd>
-  <p>If the <span>stack of open elements</span> is not empty, switch
-  the <span>insertion mode</span> to "<span title='the "in element"
-  insertion mode'>in element</span>".
-  <p>Otherwise, if there is the document element, switch
-  the <span>insertion mode</span> to "<span title='the "after root
-  element" insertion mode'>after root element</span>".
-  <p>Otherwise, switch the <span>insertion mode</span> to
-  "<span title='the "before root element" insertion mode'>before root
-  element</span>".
   <p>If the <span>system identifier</span> of the token is not
   empty, <span>process the external subset</span>.
 
@@ -124,6 +125,72 @@ U+000A LINE FEED (LF), U+000C FORM FEED (FF), U+000D CARRIAGE RETURN
 
 <dt>Any other character token
 <dd><p><span>Parse error</span>.  Ignore the token.
+
+</dl>
+
+<h1>The "<dfn title='the "in subset in element" insertion mode'>in subset in element</dfn>" insertion mode</h1>
+
+<p>When the user agent is to apply the rules for the "<span title='the
+"in subset in element" insertion mode'>in subset in
+element</span>" <span>insertion mode</span>, the user
+agent <em class=rfc2119>MUST</em> handle the token as follows:
+
+<dl class=switch>
+
+<dt>An end-of-file token
+<dd><p><span>Stop parsing</span>.
+
+<dt>An end-of-DOCTYPE token
+<dd>
+  <p>Switch the <span>insertion mode</span> to "<span title='the "in
+  element" insertion mode'>in element</span>".
+
+<dt>Anything else
+<dd><p>Ignore the token.
+
+</dl>
+
+<h1>The "<dfn title='the "in subset before root element" insertion mode'>in subset before root element</dfn>" insertion mode</h1>
+
+<p>When the user agent is to apply the rules for the "<span title='the
+"in subset before root element" insertion mode'>in subset before root
+element</span>" <span>insertion mode</span>, the user
+agent <em class=rfc2119>MUST</em> handle the token as follows:
+
+<dl class=switch>
+
+<dt>An end-of-file token
+<dd><p><span>Stop parsing</span>.
+
+<dt>An end-of-DOCTYPE token
+<dd>
+  <p>Switch the <span>insertion mode</span> to "<span title='the
+  "before root element" insertion mode'>before root element</span>".
+
+<dt>Anything else
+<dd><p>Ignore the token.
+
+</dl>
+
+<h1>The "<dfn title='the "in subset after root element" insertion mode'>in subset after root element</dfn>" insertion mode</h1>
+
+<p>When the user agent is to apply the rules for the "<span title='the
+"in subset after root element" insertion mode'>in subset after root
+element</span>" <span>insertion mode</span>, the user
+agent <em class=rfc2119>MUST</em> handle the token as follows:
+
+<dl class=switch>
+
+<dt>An end-of-file token
+<dd><p><span>Stop parsing</span>.
+
+<dt>An end-of-DOCTYPE token
+<dd>
+  <p>Switch the <span>insertion mode</span> to "<span title='the
+  "after root element" insertion mode'>after root element</span>".
+
+<dt>Anything else
+<dd><p>Ignore the token.
 
 </dl>
 
@@ -158,10 +225,10 @@ U+000A LINE FEED (LF), U+000C FORM FEED (FF), U+000D CARRIAGE RETURN
 <dt>A DOCTYPE token
 <dd>
   <p><span>Parse error</span>.
-  <p>If the token's <i>has internal subset</i> flag is set, set
-  the <span>stop processing</span> flag of the parser and switch
-  the <span>insertion mode</span> to "<span title='the "in subset"
-  insertion mode'>in subset</span>".
+  <p>If the token has its <i>has internal subset</i> flag set, set
+  the <span>stop processing</span> flag and switch the <span>insertion
+  mode</span> to "<span title='the "in subset after root element"
+  insertion mode'>in subset after root element</span>".
 
 </dl>
 
@@ -176,11 +243,15 @@ agent <em class=rfc2119>MUST</em> handle the token as follows:
 
 <dt>A start tag
 <dd>
-  <p><span>Insert an XML element</span> for the token.
+  <p><span>Create an XML element</span> for the token.  Append it to
+  the <code>Document</code> object.  Put this element in
+  the <span>stack of open elements</span>.
+  <p><span>Run the application cache selection algorithm, if
+  necessary</span>.
   <p>If the token has its <i>self-closing flag</i> set, pop the
   <span>current node</span> off the <span>stack of open
-  elements</span>, <span>acknowledge the token's <i>self-closing
-  flag</i></span>, and switch the <span>insertion mode</span> to
+  elements</span>; <span>acknowledge the token's <i>self-closing
+  flag</i></span>; and then switch the <span>insertion mode</span> to
   "<span title='the "after root element" insertion mode'>after root
   element</span>".
   <p>Otherwise, switch the <span>insertion mode</span> to
@@ -207,10 +278,10 @@ U+000A LINE FEED (LF), U+000C FORM FEED (FF), U+000D CARRIAGE RETURN
 <dt>A DOCTYPE token
 <dd>
   <p><span>Parse error</span>.
-  <p>If the token's <i>has internal subset</i> flag is set, set
-  the <span>stop processing</span> flag of the parser and switch
-  the <span>insertion mode</span> to "<span title='the "in subset"
-  insertion mode'>in subset</span>".
+  <p>If the token has its <i>has internal subset</i> flag set, set
+  the <span>stop processing</span> flag and switch the <span>insertion
+  mode</span> to "<span title='the "in subset before root element"
+  insertion mode'>in subset before root element</span>".
 
 </dl>
 
@@ -248,7 +319,7 @@ U+000A LINE FEED (LF), U+000C FORM FEED (FF), U+000D CARRIAGE RETURN
 <dt>A DOCTYPE token
 <dd>
   <p><span>Insert a DOCTYPE</span>.
-  <p>If the token's <i>has internal subset</i> flag is set, switch
+  <p>If the token has its <i>has internal subset</i> flag set, switch
   the <span>insertion mode</span> to "<span title='the "in subset"
   insertion mode'>in subset</span>".
   <p>Otherwise, if the <span>system identifier</span> of the token is
