Fixed XML parsing rules

--- a/src/tokenizer/xml-delta.html
+++ b/src/tokenizer/xml-delta.html
@@ -14,10 +14,31 @@
 
 </dl>
 
+<h1><span>DOCTYPE name state</span></h1>
+<!-- DOCTYPE root name state in XML5 with different definitions -->
+
+<dl class=switch>
+
+<dt>U+005B LEFT SQUARE BRACKET ([)
+<dd>
+  <p>Switch to the <span>DTD state</span>.
+  <p>Set the <i>has internal subset</i> flag of the current token.
+  <p>Set the <span>DTD mode</span> to <i>internal subset</i>.
+  <p>Emit the current token.
+
+</dl>
+
 <h1><span>After DOCTYPE name state</span></h1>
 <!-- DOCTYPE root name after state in XML5 with different definitions -->
 
 <dl class=switch>
+
+<dt>U+005B LEFT SQUARE BRACKET ([)
+<dd>
+  <p>Switch to the <span>DTD state</span>.
+  <p>Set the <i>has internal subset</i> flag of the current token.
+  <p>Set the <span>DTD mode</span> to <i>internal subset</i>.
+  <p>Emit the current token.
 
 <dt>Anything else
 <dd>
