--- a/src/xml-tree-construction.html
+++ b/src/xml-tree-construction.html
@@ -348,12 +348,22 @@ follows:
 
 <dl class=switch>
 
-<dt>A processing instruction token whose target is "xml"
+<dt>A processing instruction token
 <dd>
-  <p><span>Process an XML declaration</span>.
-  <p>Switch the <span>insertion mode</span> to 
-  "<span title='the "before root element" insertion mode'>before root
-  element</span>".
+  <p>If the current token's <span>target</span> is "<code>xml</code>",
+  then run these steps:
+    <ol>
+    <li><span>Process an XML declaration</span>.
+    <li>Switch the <span>insertion mode</span> to "<span title='the
+    "before root element" insertion mode'>before root element</span>".
+    </ol>
+  <p>Otherwise, run these steps:
+    <ol>
+    <li><span>The XML declaration is missing</span>.
+    <li>Switch the <span>insertion mode</span> to "<span title='the
+    "before DOCTYPE" insertion mode'>before DOCTYPE</span>".
+    <li>Reprocess the token.
+    </ol>
 
 <dt>Anything else
 <dd>
