--- a/src/tokenizer/xml.html
+++ b/src/tokenizer/xml.html
@@ -1,10 +1,10 @@
 <!--
 XXX
 
-ENTITY value character reference state
 parameter entity reference states
 external subset / PE mode
 unquoted attr values
 attr with no value
+& without name and ;
 
 -->
